@@ -113,7 +113,7 @@
         <zookeeper.version>3.8.4</zookeeper.version>
         <zstd.version>1.5.5-5</zstd.version>
         <opencensus.version>0.31.1</opencensus.version>
-        <commons.lang3.version>3.9</commons.lang3.version>
+        <commons.lang3.version>3.18.0</commons.lang3.version>
         <ignite-kafka-ext.version>1.0.0</ignite-kafka-ext.version>
 
         <!-- Maven plugins versions -->
@@ -1078,6 +1078,9 @@
                                 --add-opens=java.base/java.security=ALL-UNNAMED
                                 --add-opens=java.management/sun.management=ALL-UNNAMED
                                 --add-opens java.desktop/java.awt.font=ALL-UNNAMED
+                                --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                                --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+                                --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
